Hiding the add to friends button when user views own profile

--- a/app/src/main/res/layout/user_profile_summary.xml
+++ b/app/src/main/res/layout/user_profile_summary.xml
@@ -92,6 +92,7 @@
 
         <!-- Friend/Unfriend button -->
         <FrameLayout
+            android:id="@+id/user_friend_button_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="8dp"
@@ -111,6 +112,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="8dp"
             android:paddingBottom="8dp">
 
             <TextView
@@ -149,8 +151,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp">
+            android:paddingTop="8dp">
 
             <!--<TextView
                 android:layout_width="match_parent"
