--- a/app/src/main/res/layout/user_profile_summary.xml
+++ b/app/src/main/res/layout/user_profile_summary.xml
@@ -98,7 +98,7 @@
             android:paddingTop="8dp"
             android:paddingBottom="8dp">
 
-            <Button
+            <com.ddiehl.android.htn.view.widgets.DualStateButton
                 android:id="@+id/user_friend_button"
                 android:layout_width="@dimen/user_friend_button_width"
                 android:layout_height="@dimen/user_friend_button_height"
