--- a/app/src/main/res/layout/user_profile_summary.xml
+++ b/app/src/main/res/layout/user_profile_summary.xml
@@ -129,11 +129,11 @@
 
                 <EditText
                     android:id="@+id/user_friend_note_edit"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:inputType="text"
-                    android:textSize="28sp"
-                    android:hint="@string/user_note_hint"/>
+                    android:textSize="28sp"/>
 
                 <Button
                     android:id="@+id/user_friend_note_confirm"
