--- a/app/src/main/res/layout/trophy_layout.xml
+++ b/app/src/main/res/layout/trophy_layout.xml
@@ -12,15 +12,15 @@
 
     <ImageView
         android:id="@+id/trophy_icon"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="@dimen/user_trophy_icon_width"
+        android:layout_height="@dimen/user_trophy_icon_height"
         android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/trophy_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="@dimen/user_trophy_name_text_size"
         android:textColor="@color/secondary_text"
         android:gravity="center"
         android:layout_gravity="center"/>
