--- a/app/src/main/res/layout/trophy_row.xml
+++ b/app/src/main/res/layout/trophy_row.xml
@@ -7,4 +7,4 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="12dp"/>
+    android:paddingBottom="@dimen/user_trophy_row_padding"/>
