--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="baseline_spacing">8dp</dimen>
 
     <dimen name="link_title_text_size">20sp</dimen>
     <dimen name="link_metadata_text_size">14sp</dimen>
@@ -55,6 +56,11 @@
     <dimen name="user_note_label_padding_start">8dp</dimen>
     <dimen name="user_friend_button_width">232dp</dimen>
     <dimen name="user_friend_button_height">72dp</dimen>
+    <dimen name="user_friend_note_text_size">28sp</dimen>
     <dimen name="user_trophies_label_text_size">@dimen/user_note_label_text_size</dimen>
+    <dimen name="user_trophy_row_padding">12dp</dimen>
+    <dimen name="user_trophy_icon_width">72dp</dimen>
+    <dimen name="user_trophy_icon_height">@dimen/user_trophy_icon_width</dimen>
+    <dimen name="user_trophy_name_text_size">16sp</dimen>
 
 </resources>
