--- a/app/src/main/res/xml/preferences_all.xml
+++ b/app/src/main/res/xml/preferences_all.xml
@@ -11,12 +11,10 @@
     <PreferenceCategory
         android:title="@string/preferences_app">
 
-        <!--<CheckBoxPreference
+        <CheckBoxPreference
             android:key="pref_enable_ads"
-            android:enabled="false"
             android:title="@string/pref_enable_ads"
-            android:summary="@string/pref_enable_ads_summary"
-            android:defaultValue="false"/>-->
+            android:defaultValue="false"/>
 
         <Preference
             android:key="pref_about_app"
