Disabled analytics unless preference is enabled

--- a/app/src/main/res/xml/preferences_all.xml
+++ b/app/src/main/res/xml/preferences_all.xml
@@ -3,13 +3,17 @@
   ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
   -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:key="prefs_user">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Show these to all users -->
     <!-- Ensure any preferences here get synced with preferences_user.xml -->
     <PreferenceCategory
         android:title="@string/preferences_app">
+
+        <CheckBoxPreference
+            android:key="pref_allow_analytics"
+            android:title="@string/pref_allow_analytics"
+            android:defaultValue="true"/>
 
         <!--<CheckBoxPreference
             android:key="pref_enable_ads"
