--- a/app/src/main/res/xml/preferences_user_gold.xml
+++ b/app/src/main/res/xml/preferences_user_gold.xml
@@ -3,8 +3,7 @@
   ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
   -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:key="prefs_user">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
         android:title="gold options">
