--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -67,6 +67,14 @@
                 tools:text="573"/>
 
             <TextView
+                android:id="@+id/comment_controversiality_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="†"
+                android:textColor="@color/comment_controversiality_indicator"/>
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/comment_secondary_data_margin"
