--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <resources>
 
     <!-- Icon height in navigation drawer is 20dp w/ 6dp padding -->
@@ -24,5 +28,6 @@
     <color name="author_admin_background">#FF0011</color>
     <color name="author_admin_text">#ffffff</color>
     <color name="markdown_quote_block">@color/primary_light</color>
+    <color name="comment_controversiality_indicator">#FF5252</color>
 
 </resources>
