--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -170,10 +170,12 @@
 
             </LinearLayout>
 
-            <ImageView style="@style/LinkThumbnail"
+            <ImageView
                 android:id="@+id/link_thumbnail"
                 android:layout_width="@dimen/link_thumbnail_size"
                 android:layout_height="@dimen/link_thumbnail_size"
+                android:layout_gravity="center"
+                android:background="@drawable/thumbnail_bg"
                 android:src="@drawable/ic_thumbnail_placeholder"/>
 
         </LinearLayout>
