--- a/app/src/main/res/layout/link_comments_fragment.xml
+++ b/app/src/main/res/layout/link_comments_fragment.xml
@@ -3,10 +3,17 @@
   ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
   -->
 
-<android.support.v7.widget.RecyclerView
+<android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/recycler_view"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    android:background="@color/primary_light"/>
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:background="@color/primary_light"/>
+
+</android.support.v4.widget.SwipeRefreshLayout>
