--- a/app/src/main/res/drawable/listings_card_upvoted_bg.xml
+++ b/app/src/main/res/drawable/listings_card_upvoted_bg.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
         android:width="1dp"
-        android:color="@android:color/black"/>
+        android:color="@color/primary"/>
 
     <solid
         android:color="@color/reddit_orange"/>
