--- a/app/src/main/res/drawable/listings_card_downvoted_bg.xml
+++ b/app/src/main/res/drawable/listings_card_downvoted_bg.xml
@@ -7,7 +7,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/primary"/>
+        android:color="@color/primary_dark"/>
 
     <solid
         android:color="@color/reddit_blue" />
