--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -30,8 +31,10 @@
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            android:elevation="@dimen/navigation_drawer_elevation"
             app:headerLayout="@layout/navigation_drawer_header"
-            app:menu="@menu/navigation" />
+            app:menu="@menu/navigation"
+            tools:targetApi="21"/>
 
     </android.support.v4.widget.DrawerLayout>
 
