--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="AppTheme.Base"/>
@@ -7,7 +7,6 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
-
         <!-- to remove the default action -->
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item> <!-- For 2.x version -->
@@ -20,50 +19,21 @@
         <item name="android:textColorSecondary">@color/icons</item>
     </style>
 
-    <style name="NavigationDrawer">
-        <item name="android:layout_width">@dimen/navigation_drawer_width</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:elevation">@dimen/navigation_drawer_elevation</item>
-        <item name="android:layout_gravity">start</item>
-        <item name="android:choiceMode">singleChoice</item>
-    </style>
-
-    <style name="NavigationDrawerItem">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/navigation_drawer_item_height</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:paddingLeft">@dimen/navigation_drawer_item_margin</item>
-        <item name="android:paddingRight">@dimen/navigation_drawer_item_margin</item>
-    </style>
-
-    <style name="NavigationDrawerItemIcon">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:color">@color/accent</item>
-    </style>
-
-    <style name="NavigationDrawerItemText">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:textColor">@color/primary_text</item>
-        <item name="android:textSize">@dimen/navigation_drawer_item_text</item>
-    </style>
-
-    <style name="NavigationDrawerEditText">
-    </style>
-
     <style name="LinkTitleTextView">
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily" tools:targetApi="16">sans-serif-light</item>
         <item name="android:textSize">@dimen/link_title_text_size</item>
         <item name="android:textColor">@color/primary_text</item>
+    </style>
+
+    <style name="CommentLinkTitleTextView" parent="LinkTitleTextView">
+        <item name="android:textSize">@dimen/comment_body_text_size</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="LinkDomainTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily" tools:targetApi="16">sans-serif-light</item>
         <item name="android:textSize">@dimen/link_metadata_text_size</item>
         <item name="android:textColor">@color/secondary_text</item>
         <!--<item name="android:textStyle">italic</item>-->
@@ -71,11 +41,6 @@
 
     <style name="GildedTextView" parent="LinkDomainTextView">
         <!-- Simply inherits from LinkDomainTextView for now -->
-    </style>
-
-    <style name="CommentLinkTitleTextView" parent="LinkTitleTextView">
-        <item name="android:textSize">@dimen/comment_body_text_size</item>
-        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="LinkMetadataTextView">
