--- a/app/src/main/res/layout/listings_fragment.xml
+++ b/app/src/main/res/layout/listings_fragment.xml
@@ -10,7 +10,6 @@
     android:id="@+id/recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    android:background="@color/primary_light"/>
+    android:scrollbars="vertical"/>
 
 </android.support.v4.widget.SwipeRefreshLayout>
