--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,5 +27,6 @@
   <color name="author_admin_text">#ffffff</color>
   <color name="markdown_quote_block">@color/primary_light</color>
   <color name="comment_controversiality_indicator">#FF5252</color>
+  <color name="nsfw_tag_color">#d10023</color>
 
 </resources>
