--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Reminder - changes here should be reflected in link_comments_link.xml -->
+<!-- Reminder - changes here should be reflected in listings_link.xml -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/link_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/listings_card_bg"
     android:orientation="vertical">
 
   <LinearLayout
@@ -79,7 +78,6 @@
       android:paddingBottom="@dimen/link_list_item_margin_vertical"
       android:paddingLeft="@dimen/link_list_item_margin_horizontal"
       android:paddingRight="@dimen/link_list_item_margin_horizontal"
-      android:background="@color/primary_dark"
       android:orientation="horizontal">
 
     <LinearLayout
@@ -98,7 +96,7 @@
             android:id="@+id/link_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/LinkMetadataTextViewDark"
+            style="@style/LinkMetadataTextViewLight"
             tools:text="573 points"/>
 
         <com.ddiehl.android.htn.view.widgets.RedditDateTextView
@@ -108,7 +106,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             tools:text="2 days ago"
-            style="@style/LinkMetadataTextViewDark"/>
+            style="@style/LinkMetadataTextViewLight"/>
 
       </RelativeLayout>
 
@@ -121,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="/u/andrewsmith1984"
-            style="@style/LinkMetadataTextViewDark"/>
+            style="@style/LinkMetadataTextViewLight"/>
 
         <TextView
             android:id="@+id/link_subreddit"
@@ -130,7 +128,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             tools:text="/r/AskReddit"
-            style="@style/LinkMetadataTextViewDark"/>
+            style="@style/LinkMetadataTextViewLight"/>
 
       </RelativeLayout>
 
@@ -153,7 +151,7 @@
             android:layout_weight="1"
             android:layout_gravity="start"
             tools:text="1993 comments"
-            style="@style/LinkMetadataTextViewDark"/>
+            style="@style/LinkMetadataTextViewLight"/>
 
         <ImageView
             android:id="@+id/link_saved_view"
@@ -177,7 +175,7 @@
         android:layout_width="@dimen/link_thumbnail_size"
         android:layout_height="@dimen/link_thumbnail_size"
         android:layout_gravity="center"
-        android:background="@drawable/thumbnail_bg"
+        android:background="@drawable/thumbnail_bg_light"
         android:src="@drawable/ic_thumbnail_placeholder"/>
 
   </LinearLayout>
