--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -74,8 +74,6 @@
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:paddingTop="@dimen/link_list_item_margin_vertical"
-      android:paddingBottom="@dimen/link_list_item_margin_vertical"
       android:paddingLeft="@dimen/link_list_item_margin_horizontal"
       android:paddingRight="@dimen/link_list_item_margin_horizontal"
       android:orientation="horizontal">
@@ -132,53 +130,17 @@
 
       </RelativeLayout>
 
-      <View
-          android:layout_width="fill_parent"
-          android:layout_height="@dimen/comment_data_divider_width"
-          android:layout_marginTop="@dimen/comment_data_divider_margin"
-          android:layout_marginBottom="@dimen/comment_data_divider_margin"
-          android:background="@color/divider" />
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/link_comment_count"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="start"
-            tools:text="1993 comments"
-            style="@style/LinkMetadataTextViewLight"/>
-
-        <ImageView
-            android:id="@+id/link_saved_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_saved"/>
-
-        <ImageView
-            android:id="@+id/link_stickied_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_stickied"/>
-
-      </LinearLayout>
-
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/link_thumbnail"
-        android:layout_width="@dimen/link_thumbnail_size"
-        android:layout_height="@dimen/link_thumbnail_size"
-        android:layout_gravity="center"
-        android:background="@drawable/thumbnail_bg_light"
-        android:src="@drawable/ic_thumbnail_placeholder"/>
-
   </LinearLayout>
+
+  <!--android:background="@drawable/thumbnail_bg_light"-->
+  <ImageView
+      android:id="@+id/link_thumbnail"
+      android:layout_width="match_parent"
+      android:layout_height="@dimen/link_full_size"
+      android:layout_gravity="center"
+      android:src="@drawable/ic_thumbnail_placeholder"/>
 
   <com.ddiehl.android.htn.view.widgets.MarkdownTextView
       android:id="@+id/link_self_text"
@@ -191,5 +153,38 @@
       android:bufferType="spannable"
       android:background="@android:color/white"
       tools:text="Lorem ipsum dolor sit amet"/>
+
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:paddingTop="@dimen/link_list_item_margin_vertical"
+      android:paddingBottom="@dimen/link_list_item_margin_vertical"
+      android:paddingLeft="@dimen/link_list_item_margin_horizontal"
+      android:paddingRight="@dimen/link_list_item_margin_horizontal"
+      android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/link_comment_count"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="start"
+        tools:text="1993 comments"
+        style="@style/LinkMetadataTextViewLight"/>
+
+    <ImageView
+        android:id="@+id/link_saved_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_saved"/>
+
+    <ImageView
+        android:id="@+id/link_stickied_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_stickied"/>
+
+  </LinearLayout>
 
 </LinearLayout>
